--- a/README.org
+++ b/README.org
@@ -65,6 +65,9 @@ its content.
 
 ** Septiembre 2024
 
+*** 04-Sep-24
++ [[https://blog.jle.im/entry/levels-of-type-safety-haskell-lists.html][Seven levels of type safety in Haskell: Lists]]. ~ Justin Lê (@mstk). #Haskell #FunctionalProgramming
+
 *** 03-Sep-24
 + [[https://jaalonso.github.io/calculemus/posts/2024/09/03-limits_are_less_than_or_equal_to_upper_bounds/][Proofs of "If x is the limit of u and y is an upper bound of u, then x ≤ y" in Lean4 and Isabelle/HOL]]. #ITP #Lean4 #IsabelleHOL #Math #Calculemus
 + [[https://www.isa-afp.org/entries/Diagonal_Ramsey.html][An exponential improvement for diagonal Ramsey (in Isabelle/HOL)]]. ~ Lawrence C. Paulson (@LawrPaulson@mathstodon.xyz). #ITP #IsabelleHOL #Math
