--- a/README.org
+++ b/README.org
@@ -65,6 +65,50 @@ its content.
 
 ** Septiembre 2024
 
+*** 06-Sep-24
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.6/LIPIcs.ITP.2024.6.pdf][Towards solid abelian groups: A formal proof of Nöbeling’s theorem]]. ~ Dagur Asgeirsson. #ITP #LeanProver #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.8/LIPIcs.ITP.2024.8.pdf][The directed Van Kampen theorem in Lean]]. ~ Henning Basold, Peter Bruin & Dominique Lawson. #ITP #LeanProver #Lean4 #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.9/LIPIcs.ITP.2024.9.pdf][Verifying peephole rewriting in SSA compiler IRs]]. ~ Siddharth Bhat, Alex Keizer, Chris Hughes, Andrés Goens & Tobias Grosser. #ITP #LeanProver
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.10/LIPIcs.ITP.2024.10.pdf][Duper: A proof-producing superposition theorem prover for dependent type theory]]. ~ Joshua Clune, Yicheng Qian, Alexander Bentkamp & Jeremy Avigad. #ITP #LeanProver #Lean4
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.27/LIPIcs.ITP.2024.27.pdf][Teaching mathematics using Lean and controlled natural language]]. ~ Patrick Massot. #ITP #LeanProver #Lean4 #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.28/LIPIcs.ITP.2024.28.pdf][Lean formalization of completeness proof for Coalition Logic with Common Knowledge]]. ~ Kai Obendrauf, Anne Baanen, Patrick Koopmann & Vera Stebletsova. #ITP #LeanProver #Lean4
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.35/LIPIcs.ITP.2024.35.pdf][Formal verification of the empty hexagon number]]. ~ Bernardo Subercaseaux, Wojciech Nawrocki, James Gallicchio, Cayden Codel, Mario Carneiro & Marijn J. H. Heule. #ITP #LeanProver #Lean4
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.37/LIPIcs.ITP.2024.37.pdf][Integrals within integrals: A formalization of the Gagliardo-Nirenberg-Sobolev inequality]]. ~ Floris van Doorn & Heather Macbeth. #ITP #LeanProver #Lean4 #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.41/LIPIcs.ITP.2024.41.pdf][Graphical rewriting for diagrammatic reasoning in monoidal categories in Lean4]]. ~ Sam Ezeh. #ITP #LeanProver #Lean4 #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.40/LIPIcs.ITP.2024.40.pdf][Formalising half of a graduate textbook on number theory]]. ~ Manuel Eberl, Anthony Bordg, Lawrence C. Paulson & Wenda Li. #ITP #IsabelleHOL #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.21/LIPIcs.ITP.2024.21.pdf][A formalization of the Lévy-Prokhorov metric in Isabelle/HOL]]. ~ Michikazu Hirata. #ITP #IsabelleHOL #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.1/LIPIcs.ITP.2024.1.pdf][Alpha-beta pruning verified]]. ~ Tobias Nipkow. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.3/LIPIcs.ITP.2024.3.pdf][A formal analysis of capacity scaling algorithms for minimum cost flows]]. ~ Mohammad Abdulaziz & Thomas Ammer. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.7/LIPIcs.ITP.2024.7.pdf][An operational semantics in Isabelle/HOL-CSP]]. ~ Benoît Ballenghien & Burkhart Wolff. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.31/LIPIcs.ITP.2024.31.pdf][A verified earley parser]]. ~ Martin Rau & Tobias Nipkow. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.12/LIPIcs.ITP.2024.12.pdf][A modular formalization of superposition in Isabelle/HOL]]. ~ Martin Desharnais, Balazs Toth, Uwe Waldmann, Jasmin Blanchette & Sophie Tourret. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.22/LIPIcs.ITP.2024.22.pdf][Distributed parallel build for the Isabelle Archive of Formal Proofs]]. ~ Fabian Huch & Makarius Wenzel. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.23/LIPIcs.ITP.2024.23.pdf][A generalised union of rely–guarantee and separation logic using permission algebras]]. ~ Vincent Jackson, Toby Murray & Christine Rizkallah. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.24/LIPIcs.ITP.2024.24.pdf][An Isabelle/HOL formalization of narrowing and multiset narrowing for E-unifiability, reachability and infeasibility]]. ~ Dohan Kim. #ITP #IsabelleHOL
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.30/LIPIcs.ITP.2024.30.pdf][A Coq formalization of Taylor models and power series for solving ordinary differential equations]]. ~ Sewon Park & Holger Thies. #ITP #Coq #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.5/LIPIcs.ITP.2024.5.pdf][A comprehensive overview of the Lebesgue differentiation theorem in Coq]]. ~ Reynald Affeldt & Zachary Stone. #ITP #Coq #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.4/LIPIcs.ITP.2024.4.pdf][Taming differentiable logics with Coq formalisation]]. ~ Reynald Affeldt, Alessandro Bruni, Ekaterina Komendantskaya, Natalia Ślusarz & Kathrin Stark. #ITP #Coq #Logic #MachineLearning
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.13/LIPIcs.ITP.2024.13.pdf][Completeness of asynchronous session tree subtyping in Coq]]. ~ Burak Ekici & Nobuko Yoshida. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.14/LIPIcs.ITP.2024.14.pdf][End-to-end formal verification of a fast and accurate floating-point approximation]]. ~ Florian Faissole, Paul Geneau de Lamarlière & Guillaume Melquiond. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.15/LIPIcs.ITP.2024.15.pdf][Typed compositional quantum computation with lenses]]. ~ Jacques Garrigue & Takafumi Saikawa. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.17/LIPIcs.ITP.2024.17.pdf][Verifying software emulation of an unsupported hardware instruction]]. ~ Samuel Gruetter, Thomas Bourgeat & Adam Chlipala. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.19/LIPIcs.ITP.2024.19.pdf][Modular verification of intrusive list and tree data structures in separation logic]]. ~ Marc Hermes & Robbert Krebbers. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.20/LIPIcs.ITP.2024.20.pdf][Formalizing the algebraic small object argument in UniMath]]. ~ Dennis Hilhorst & Paige Randall North. #ITP #Coq #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.26/LIPIcs.ITP.2024.26.pdf][The Rewster: Type preserving rewrite rules for the Coq proof assistant]]. ~ Yann Leray, Gaëtan Gilbert, Nicolas Tabareau & Théo Winterhalter. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.33/LIPIcs.ITP.2024.33.pdf][Correctly compiling proofs about programs without proving compilers correct]]. ~ Audrey Seo, Christopher Lam, Dan Grossman & Talia Ringer. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.34/LIPIcs.ITP.2024.34.pdf][Redex2Coq: Towards a theory of decidability of redex’s reduction semantics]]. ~ Mallku Soldevila, Rodrigo Ribeiro & Beta Ziliani. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.36/LIPIcs.ITP.2024.36.pdf][Defining and preserving more C behaviors: Verified compilation using a concrete memory model]]. ~ Andrew Tolmach, Chris Chhak & Sean Anderson. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.39/LIPIcs.ITP.2024.39.pdf][Robust mean estimation by all means]]. ~ Reynald Affeldt, Clark Barrett, Alessandro Bruni, Ieva Daukantas, Harun Khan, Takafumi Saikawa & Carsten Schürmann. #ITP #Coq
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.32/LIPIcs.ITP.2024.32.pdf][Abstractions for multi-sorted substitutions]]. ~ Hannes Saffrich. #ITP #Agda
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.38/LIPIcs.ITP.2024.38.pdf][The functor of points approach to schemes in Cubical Agda]]. ~ Max Zeuner & Matthias Hutzler. #ITP #Agda
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.11/LIPIcs.ITP.2024.11.pdf ][A formalization of the general theory of quaternions]]. ~ Thaynara Arielly de Lima, André Luiz Galdino, Bruno Berto de Oliveira Ribeiro & Mauricio Ayala-Rincón. #ITP #PVS #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.25/LIPIcs.ITP.2024.25.pdf][Formalizing the Cholesky factorization theorem]]. ~ Carl Kwan & Warren A. Hunt Jr. #ITP #ACL2 #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.16/LIPIcs.ITP.2024.16.pdf][A formal proof of R(4,5)=25]]. ~ Thibault Gauthier & Chad E. Brown. #ITP #HOL4 #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.18/LIPIcs.ITP.2024.18.pdf][Mechanized HOL reasoning in set theory]]. ~ Simon Guilloud, Sankalp Gambhir, Andrea Gilot & Viktor Kunčak. #ITP #Lisa #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024.29/LIPIcs.ITP.2024.29.pdf][Conway normal form: Bridging approaches for comprehensive formalization of surreal numbers]]. ~ Karol Pąk & Cezary Kaliszyk. #ITP #Mizar #Math
++ [[https://drops.dagstuhl.de/storage/00lipics/lipics-vol309-itp2024/LIPIcs.ITP.2024/LIPIcs.ITP.2024.pdf][15th International Conference on Interactive Theorem Proving (ITP 2024,)]]. #ITP
++ [[https://books.google.nl/books?id=Fd8eEQAAQBAJ&newbks=0&lpg=PP1&pg=PA1#v=onepage&q&f=false][The code of Mathematics: Proof and truth]] ~ Stefan Müller-Stach. #Math
++ [[https://peiyang-song.github.io/data/Neuro-Symbolic%20Theorem%20Proving%20with%20Lean.pdf][Neuro-symbolic theorem proving with Lean]]. ~ Peiyang Song (@p_song1). #ITP #LeanProver #AI #MachineLearning
 *** 05-Sep-24
 + [[https://leanfirststeps.blogspot.com/2024/09/07-proof-by-cases.html][Lean: First steps (07 - Proof by cases)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #Lean4 #Math
 + [[https://leanprover-community.github.io/logic_and_proof/][Logic and proof]]. ~ Jeremy Avigad, Robert Y. Lewis & Floris van Doorn. #ITP #LeanProver #Lean4 #Logic #Math
